sdk/runanywhere-swift/Sources/RunAnywhere/CRACommons/include/rac_stt_hybrid_router.h

/**
 * @brief Allocate a new STT hybrid router. Returns an opaque handle.
 *
 * @param out_handle Receives the handle. NULL on failure.
 * @return RAC_SUCCESS or error code.
 */
RAC_API rac_result_t rac_stt_hybrid_router_create(rac_handle_t* out_handle);
/**
 * @brief Destroy a router and free its resources. The wrapped services are
 *        NOT destroyed — the caller owns those.
 */
RAC_API void rac_stt_hybrid_router_destroy(rac_handle_t handle);
/**
 * @brief Cancel the in-flight transcribe call on @p handle, if any.
 *
 * Safe to call from any thread; uses an atomic to track the currently
 * invoked service. rac_stt_service_ops_t exposes no cancel op today, so this
 * is effectively a no-op — it exists so callers can wire cancellation now and
 * have it take effect automatically once an engine adds a cancel op.
 *
 * @return RAC_SUCCESS.
 */
RAC_API rac_result_t rac_stt_hybrid_router_cancel(rac_handle_t handle);