sdk/runanywhere-swift/Sources/RunAnywhere/CRACommons/include/rac_hybrid_custom_filter.h

/**
 * @brief Host-supplied eligibility predicate.
 *
 * Returns RAC_TRUE iff the candidate described by @p ctx is eligible. Must be
 * thread-safe / reentrant — the router may invoke it concurrently from
 * multiple request threads.
 *
 * @param ctx       Per-request routing context (the candidate model id plus
 *                  the device-state snapshot the router already resolved).
 *                  Never NULL when invoked by the router.
 * @param user_data Opaque binding-owned pointer supplied at registration.
 */
typedef rac_bool_t (*rac_hybrid_custom_filter_predicate_t)(
    const rac_hybrid_routing_context_t* ctx, void* user_data);
/**
 * @brief Register (or replace) a named custom-filter predicate.
 *
 * Re-registering an existing @p name atomically replaces that entry's
 * predicate + user_data. Registration copies @p name into table-owned
 * storage; the caller may free its copy on return.
 *
 * @param name      NUL-terminated identifier (≤ RAC_HYBRID_CUSTOM_FILTER_NAME_MAX
 *                  including the terminator). Must be non-NULL and non-empty.
 * @param predicate Predicate to invoke. Must be non-NULL.
 * @param user_data Opaque pointer passed back to @p predicate. MAY be NULL.
 * @return RAC_SUCCESS;
 *         RAC_ERROR_INVALID_PARAMETER if @p name is NULL/empty/too long or
 *         @p predicate is NULL;
 *         RAC_ERROR_OUT_OF_MEMORY if the new snapshot cannot be allocated.
 */
RAC_API rac_result_t rac_hybrid_register_custom_filter(
    const char*                          name,
    rac_hybrid_custom_filter_predicate_t predicate,
    void*                                user_data);
/**
 * @brief Remove a named custom-filter predicate.
 *
 * No-op (still RAC_SUCCESS) when @p name is not registered.
 *
 * @param name NUL-terminated identifier. Must be non-NULL and non-empty.
 * @return RAC_SUCCESS;
 *         RAC_ERROR_INVALID_PARAMETER if @p name is NULL/empty;
 *         RAC_ERROR_OUT_OF_MEMORY if the shrunk snapshot cannot be allocated.
 */
RAC_API rac_result_t rac_hybrid_unregister_custom_filter(const char* name);