sdk/runanywhere-flutter/packages/runanywhere/lib/native/dart_bridge_hybrid_stt.dart


/// Opaque handle to a native STT service the router holds by pointer: the heap
/// `rac_stt_service_t` the setters receive, plus the strdup'd model id the
/// struct points at — both freed in [DartBridgeHybridStt.destroyService]. The
/// public router treats this as an opaque token; only this bridge dereferences
/// it.
class HybridServiceHandle {
  HybridServiceHandle._(this._servicePtr, this._modelIdPtr);

  final Pointer<_RacSttService> _servicePtr;
  final Pointer<Utf8> _modelIdPtr;
}

/// FFI bridge to the commons STT hybrid router + cloud registration.
/// Stateless beyond cached function lookups; the public `HybridSttRouter`
/// owns the handles.
class DartBridgeHybridStt {
  DartBridgeHybridStt._();

  static final DartBridgeHybridStt instance = DartBridgeHybridStt._();

  static final _logger = SDKLogger('DartBridge.HybridStt');

  static DynamicLibrary get _lib => PlatformLoader.loadCommons();

  // --- Cached lookups (resolved once on first access) ----------------------

  static final _RouterCreateDart _routerCreate =
      _lib.lookupFunction<_RouterCreateNative, _RouterCreateDart>(
          'rac_stt_hybrid_router_create');

  static final _RouterDestroyDart _routerDestroy =
      _lib.lookupFunction<_RouterDestroyNative, _RouterDestroyDart>(
          'rac_stt_hybrid_router_destroy');

  // Best-effort cancel — same (handle) -> result shape; resolved lazily so
  // older packaged commons without the symbol degrade to a no-op.
  static final _RouterCancelDart? _routerCancel = (() {
    try {
      return _lib.lookupFunction<_RouterCancelNative, _RouterCancelDart>(
          'rac_stt_hybrid_router_cancel');
    } catch (_) {
      return null;
    }
  })();

  static final _RouterSetServiceProtoDart _setOfflineServiceProto =
      _lib.lookupFunction<_RouterSetServiceProtoNative,
              _RouterSetServiceProtoDart>(
          'rac_stt_hybrid_router_set_offline_service_proto');

  static final _RouterSetServiceProtoDart _setOnlineServiceProto =
      _lib.lookupFunction<_RouterSetServiceProtoNative,
              _RouterSetServiceProtoDart>(
          'rac_stt_hybrid_router_set_online_service_proto');

  static final _RouterSetPolicyProtoDart _setPolicyProto = _lib.lookupFunction<
      _RouterSetPolicyProtoNative,
      _RouterSetPolicyProtoDart>('rac_stt_hybrid_router_set_policy_proto');

  static final _RouterTranscribeProtoDart _transcribeProto =
      _lib.lookupFunction<_RouterTranscribeProtoNative,
          _RouterTranscribeProtoDart>('rac_stt_hybrid_router_transcribe_proto');

  static final _RouterProtoBufferFreeDart _protoBufferFree =
      _lib.lookupFunction<_RouterProtoBufferFreeNative,
              _RouterProtoBufferFreeDart>(
          'rac_stt_hybrid_router_proto_buffer_free');

  static final _FindForEngineDart _pluginFindForEngine =
      _lib.lookupFunction<_FindForEngineNative, _FindForEngineDart>(
          'rac_plugin_find_for_engine');

  static final _HybridSetDeviceStateDart _setDeviceState = _lib.lookupFunction<
      _HybridSetDeviceStateNative,
      _HybridSetDeviceStateDart>('rac_hybrid_set_device_state');

  static final _HybridRegisterCustomFilterDart _registerCustomFilter =
      _lib.lookupFunction<_HybridRegisterCustomFilterNative,
          _HybridRegisterCustomFilterDart>('rac_hybrid_register_custom_filter');

  static final _HybridUnregisterCustomFilterDart _unregisterCustomFilter =
      _lib.lookupFunction<_HybridUnregisterCustomFilterNative,
              _HybridUnregisterCustomFilterDart>(
          'rac_hybrid_unregister_custom_filter');

  // --- Router lifecycle ----------------------------------------------------

  /// Allocate a native router handle. Throws [StateError] on failure.
  RacHandle createRouter() {
    final out = calloc<RacHandle>();
    try {
      final rc = _routerCreate(out);
      final handle = out.value;
      if (rc != RAC_SUCCESS || handle == nullptr) {
        throw StateError('rac_stt_hybrid_router_create failed (rc=$rc)');
      }
      return handle;
    } finally {
      calloc.free(out);
    }
  }

  /// Destroy a router handle. The wrapped services are NOT freed here — callers
  /// clear the slots + [destroyService] them first (see header UAF note).
  /// Cancel an in-flight transcribe, if any. Best-effort: commons treats
  /// this as a no-op until an STT engine exposes a cancel op (see
  /// rac_stt_hybrid_router_cancel). Mirrors Swift HybridSTTRouter.cancel().
  void cancelRouter(RacHandle handle) {
    final cancelFn = _routerCancel;
    if (cancelFn == null) {
      _logger.debug('rac_stt_hybrid_router_cancel unavailable');
      return;
    }
    cancelFn(handle);
  }

  void destroyRouter(RacHandle handle) {
    if (handle == nullptr) {
      return;
    }
    _routerDestroy(handle);
  }

  // --- Registry-routed service creation ------------------------------------

  /// Create an STT service via the plugin registry, pinning [engineHint]
  /// ("sherpa" / "cloud") as the engine name passed to
  /// `rac_plugin_find_for_engine` and forwarding [modelIdOrPath] + [configJson]
  /// to the routed engine's `stt_ops->create`. Wraps the backend impl in a
  /// heap-stable `rac_stt_service_t` the router can hold by pointer. Throws
  /// [StateError] on lookup/create failure.
  ///
  /// Mirrors commons' `create_stt_service_via_registry` exactly (route → slot →
  /// create → wrap), the single creation path BOTH router sides use.
  HybridServiceHandle createService({
    required String engineHint,
    String modelIdOrPath = '',
    String? configJson,
  }) {
    final hintPtr = engineHint.toNativeUtf8();
    try {
      final vtable = _pluginFindForEngine(_kPrimitiveTranscribe, hintPtr);
      if (vtable == nullptr) {
        throw StateError(
          "No '$engineHint' STT plugin registered. Register the "
          'backend first (the on-device sherpa engine, or cloud via '
          'BACKEND.cloud.register / RunAnywhere.hybrid.registerCloud).',
        );
      }
      final sttOps = vtable.ref.sttOps;
      if (sttOps == nullptr || sttOps.ref.create == nullptr) {
        throw StateError("'$engineHint' STT plugin exposes no create op");
      }

      final modelIdPtr =
          modelIdOrPath.isEmpty ? nullptr : modelIdOrPath.toNativeUtf8();
      final configPtr =
          (configJson == null || configJson.isEmpty)
              ? nullptr
              : configJson.toNativeUtf8();
      final outImpl = calloc<Pointer<Void>>();
      try {
        final create = sttOps.ref.create.asFunction<
            int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Pointer<Void>>)>();
        final createRc = create(
          modelIdPtr.cast<Utf8>(),
          configPtr.cast<Utf8>(),
          outImpl,
        );
        final impl = outImpl.value;
        if (createRc != RAC_SUCCESS || impl == nullptr) {
          throw StateError(
            "'$engineHint' STT create failed for model "
            "'$modelIdOrPath' (rc=$createRc)",
          );
        }

        // Heap-stable storage for the service struct + a tag for logs (model id
        // when we have one, else the engine hint — matching commons).
        final tag = modelIdOrPath.isNotEmpty ? modelIdOrPath : engineHint;
        final tagPtr = tag.toNativeUtf8();
        final servicePtr = calloc<_RacSttService>();
        servicePtr.ref
          ..ops = sttOps
          ..impl = impl
          ..modelId = tagPtr;
        return HybridServiceHandle._(servicePtr, tagPtr);
      } finally {
        calloc.free(outImpl);
        if (modelIdPtr != nullptr) {
          calloc.free(modelIdPtr);
        }
        if (configPtr != nullptr) {
          calloc.free(configPtr);
        }
      }
    } finally {
      calloc.free(hintPtr);
    }
  }

  /// Destroy a service created by [createService]: run the engine's
  /// `stt_ops->destroy(impl)`, then free the heap wrapper + tag string. The
  /// router slot MUST be cleared first (see UAF note in the proto header).
  void destroyService(HybridServiceHandle? service) {
    if (service == null) {
      return;
    }
    final ops = service._servicePtr.ref.ops;
    final impl = service._servicePtr.ref.impl;
    if (ops != nullptr && ops.ref.destroy != nullptr && impl != nullptr) {
      final destroy = ops.ref.destroy.asFunction<void Function(Pointer<Void>)>();
      destroy(impl);
    }
    calloc.free(service._modelIdPtr);
    calloc.free(service._servicePtr);
  }

  // --- Slot setters + policy + transcribe ----------------------------------

  /// Attach (or detach when [service] is null) the offline-side service with
  /// its serialized HybridModelDescriptor bytes. Returns the native rc.
  int setOfflineService(
    RacHandle router,
    HybridServiceHandle? service,
    Uint8List descriptorBytes,
  ) =>
      _setService(_setOfflineServiceProto, router, service, descriptorBytes);

  /// Symmetric to [setOfflineService] for the online side.
  int setOnlineService(
    RacHandle router,
    HybridServiceHandle? service,
    Uint8List descriptorBytes,
  ) =>
      _setService(_setOnlineServiceProto, router, service, descriptorBytes);

  int _setService(
    _RouterSetServiceProtoDart fn,
    RacHandle router,
    HybridServiceHandle? service,
    Uint8List descriptorBytes,
  ) {
    final servicePtr =
        (service?._servicePtr ?? nullptr.cast<_RacSttService>()).cast<Void>();
    final bytesPtr = _copyBytes(descriptorBytes);
    try {
      return fn(router, servicePtr, bytesPtr, descriptorBytes.length);
    } finally {
      calloc.free(bytesPtr);
    }
  }

  /// Install the serialized HybridRoutingPolicy bytes. Returns the native rc.
  int setPolicy(RacHandle router, Uint8List policyBytes) {
    final bytesPtr = _copyBytes(policyBytes);
    try {
      return _setPolicyProto(router, bytesPtr, policyBytes.length);
    } finally {
      calloc.free(bytesPtr);
    }
  }

  /// Dispatch one transcribe request (serialized HybridSttTranscribeRequest)
  /// and return the serialized HybridSttTranscribeResponse bytes. Throws
  /// [StateError] when the native call fails or returns an empty envelope.
  Uint8List transcribe(RacHandle router, Uint8List requestBytes) {
    final reqPtr = _copyBytes(requestBytes);
    final outBytes = calloc<Pointer<Uint8>>();
    final outSize = calloc<Size>();
    try {
      final rc = _transcribeProto(
        router,
        reqPtr,
        requestBytes.length,
        outBytes,
        outSize,
      );
      final dataPtr = outBytes.value;
      final size = outSize.value;
      try {
        if (rc != RAC_SUCCESS || dataPtr == nullptr || size == 0) {
          throw StateError(
            'rac_stt_hybrid_router_transcribe_proto failed (rc=$rc)',
          );
        }
        // Copy out before freeing the native buffer.
        return Uint8List.fromList(dataPtr.asTypedList(size));
      } finally {
        if (dataPtr != nullptr) {
          _protoBufferFree(dataPtr);
        }
      }
    } finally {
      calloc.free(reqPtr);
      calloc.free(outBytes);
      calloc.free(outSize);
    }
  }

  // --- Device-state vtable -------------------------------------------------
